--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -45,19 +45,19 @@ jobs:
           echo "exit_code=$?" >> $GITHUB_OUTPUT
         continue-on-error: true
       
-      - name: Check for changes
-        id: check_changes
-        run: |
-          git diff --quiet docs/data.json || echo "changed=true" >> $GITHUB_OUTPUT
-      
       - name: Commit and push changes
-        if: steps.check_changes.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/data.json
-          git commit -m "Update BOC GBP rate - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
-          git push
+          git add -f docs/data.json
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            git commit -m "Update BOC GBP rate - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+            git push
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
       
       - name: Read rate data
         id: read_rate
